samples/_failures_safe/1761292961_412086_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e71ba5a.c: In function ‘main’:
./samples/SAFE/__tmp_2e71ba5a.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
